2018-08-31  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1104

	* src/hitran_xsec.cc (convolve): Fix non-FFTW build.

2018-08-31  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1103

	* src/hitran_xsec.{cc,h}, src/m_hitran_xsec.cc, src/methods.cc,

	Apply temperature correction.

	Add option apply_tfit to abs_xsec_per_speciesAddHitranXsec to disable
	temperature correction for testing purposes.

	* src/xml_io_compound_types.cc:

	Add support for temperature fit data in xml file.

	* controlfiles/artscomponents/hitran-xsec/CFC11.xml.gz: Updated.

	* .travis.yml: Give builds names.

2018-08-30  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1102

	* .travis.yml:

	Add Travis CI config.

2018-08-26  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1101

	* m_jacobian.cc(jacobianClose):
	- Removed check requiring sensor_pos and sensor_response to
	  be set even though they are not used by the function.

	* m_retrieval.cc(retrievalDefClose):
	- Updated call to jacobianClose

	* methods.cc(jacobianClose):
	- Updated entry for jacobianClose

2018-08-25  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1100

	* arts_cpi.cc(set_variable_value):
	- Set variable to be empty when variable pointer is 0.

	* interactive_workspace.[h, cc](initialize_variable):
	- Added function to (re)initialize variables

2018-08-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1099

	* src/m_rte.cc (iyEmissionStandard, yCalc): Switched from using
	FOR_ANALYTICAL_JACOBIANS_DO to using FOR_ANALYTICAL_JACOBIANS_DO2
	when setting j_analytical_do.

	Before this change surface jacobians came out as all zeros if
	there was no atmospheric quantity retrieved. Now it seems
	surface-only retrievals should work.

2018-08-23  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1098

	* m_rte.cc(yCalcAppend):
	- Add surface quantities to check for equality of retrieval
	  quantities.
